layout/generic/nsPageSequenceFrame.cpp
@@ -504,11 +504,13 @@ static void GetPrintCanvasElementsInFrame(
   }
 }
 
-nsIFrame* nsPageSequenceFrame::GetCurrentSheetFrame() {
+PrintedSheetFrame* nsPageSequenceFrame::GetCurrentSheetFrame() {
   uint32_t i = 0;
   for (nsIFrame* child : mFrames) {
+    MOZ_ASSERT(child->IsPrintedSheetFrame(),
+               "Our children must all be PrintedSheetFrame");
     if (i == mCurrentSheetIdx) {
-      return child;
+      return static_cast<PrintedSheetFrame*>(child);
     }
     ++i;
   }
@@ -517,7 +519,7 @@ nsIFrame* nsPageSequenceFrame::GetCurrentSheetFrame() {
 
 nsresult nsPageSequenceFrame::PrePrintNextSheet(nsITimerCallback* aCallback,
                                                 bool* aDone) {
-  nsIFrame* currentSheet = GetCurrentSheetFrame();
+  PrintedSheetFrame* currentSheet = GetCurrentSheetFrame();
   if (!currentSheet) {
     *aDone = true;
     return NS_ERROR_FAILURE;
@@ -621,7 +623,7 @@ nsresult nsPageSequenceFrame::PrintNextSheet() {
   // print are 1 and then two (which is different than printing a page range,
   // where the page numbers would have been 2 and then 3)
 
-  nsIFrame* currentSheetFrame = GetCurrentSheetFrame();
+  PrintedSheetFrame* currentSheetFrame = GetCurrentSheetFrame();
   if (!currentSheetFrame) {
     return NS_ERROR_FAILURE;
   }
